refactor: 블랙잭 숫자합을 계산하는 로직을 가독성 좋게 리팩터링